<resources>
    <string name="app_name">GPS</string>

    <string name="permisson_rejected">当前应用缺少必要权限，该功能暂时无法使用。如若需要，请单击【确定】按钮前往设置中心进行权限授权。</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="run">跑步</string>
    <string name="alert">提示</string>
    <string name="resume">恢复</string>
    <string name="delete">删除</string>
    <string name="complete">完成</string>

    <string name="gps_sinal_strong">GPS信号强</string>
    <string name="gps_sinal_normal">GPS信号一般</string>
    <string name="gps_sinal_weak">GPS信号弱</string>
    <string name="gps_sinal_none">无GPS信号</string>
    <string name="gps_sinal_searching">GPS信号搜索中</string>

    <string name="kilometers">公里</string>
    <string name="duration">耗时</string>
    <string name="avg_pace">平均配速</string>
    <string name="pace">配速</string>
    <string name="speed">速度</string>
    <string name="calories">卡路里</string>

    <string name="max_pace">最大配速</string>
    <string name="avg_speed">平均速度</string>
    <string name="max_speed">最大速度</string>

    <string name="gps_no_signal_tips">我们正在使用手机传感器来记录您的跑步数据\n\n由于没有GPS信号，您在该路段的路线不能在地图上绘出\n\n请到开阔的室外试试，或检查手机设置确保GPS已开启</string>
    <string name="gps_weak_signal_tips">我们正在使用手机传感器来记录您的跑步数据\n\n由于GPS信号弱，您在该路段的路线不能在地图上绘出\n\n请到开阔的室外试试，或检查手机设置确保GPS已开启</string>
    <string name="gps_searching_signal_tips">GPS信号搜索中</string>

    <string name="alert_run_finish">确定完成本次跑步吗?</string>
    <string name="alert_run_delete">确定放弃本次跑步记录吗?</string>

    <string name="toast_distance_too_short">本次运动距离太短,无法保存</string>

    <string name="date_year">年</string>
    <string name="date_month">月</string>
    <string name="date_day">日</string>
    <string name="date_hour">时</string>
    <string name="date_minute">分</string>
    <string name="date_week">周</string>

    <string name="time_currentmonth">本月</string>

    <string name="week_1">周一</string>
    <string name="week_2">周二</string>
    <string name="week_3">周三</string>
    <string name="week_4">周四</string>
    <string name="week_5">周五</string>
    <string name="week_6">周六</string>
    <string name="week_7">周日</string>

    <string name="current_week">本周</string>
    <string name="current_month">本月</string>

    <string name="unit_speed">公里/时</string>
    <string name="unit_calories">千卡</string>
    <string name="unit_pace">分/公里</string>

    <string name="low">慢</string>
    <string name="fast">快</string>

    <string name="marathon">马拉松</string>
    <string name="half_marathon">半程马拉松</string>
    <string name="full_marathon">全程马拉松</string>

    <string name="hello_blank_fragment">临时存在的string""</string>

    <string name="run_outdoor">室外跑步</string>
    <string name="no_chat_data">没有图表生成</string>

    <string-array name="detail_tab_titles">
        <item>轨迹</item>
        <item>详情</item>
        <item>配速</item>
        <item>图表</item>
    </string-array>

</resources>
